# Mehawk

./: .clang-format  README.md  flake.nix  meson.build
.github/workflows/: convert-norg-to-md.yml
include/haumea/: env.hpp
src/: env.cpp  main.cpp  meson.build
src/mehawk/: app.cpp  app.hpp  app_config.cpp  main.cpp  prelude.hpp  standard_paths.cpp  standard_paths.hpp  static_config.hpp
src/mehawk/toml_config/: concepts.hpp  config.hpp
subprojects/: toml11.wrap
test/: meson.build  toml_config.cpp
